/*
 * Copyright (C) 2013  Ohm Data
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU Affero General Public License as
 *  published by the Free Software Foundation, either version 3 of the
 *  License, or (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU Affero General Public License for more details.
 *
 *  You should have received a copy of the GNU Affero General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

/** Incorporates changes licensed under:
 *
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// This file contains protocol buffers that are used for filters

option java_package = "c5db.client.generated";
option java_outer_classname = "ComparatorProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

// This file contains protocol buffers that are used for comparators (e.g. in filters)


// This file contains protocol buffers that are used for comparators (e.g. in filters)

message Comparator {
  required string name = 1;
  optional bytes serializedComparator = 2;
}

message ByteArrayComparable {
  optional bytes value = 1;
}

message BinaryComparator {
  required ByteArrayComparable comparable = 1;
}

message BinaryPrefixComparator {
  required ByteArrayComparable comparable = 1;
}

message BitComparator {
  required ByteArrayComparable comparable = 1;
  required BitwiseOp bitwiseOp = 2;

  enum BitwiseOp {
    AND = 1;
    OR = 2;
    XOR = 3;
  }
}

message NullComparator {
}

message RegexStringComparator {
  required string pattern = 1;
  required int32 patternFlags = 2;
  required string charset = 3;
}

message SubstringComparator {
  required string substr = 1;
}
